salesforce/force-app/main/default/objects/Governance_Issue__c/fields/Issue__c.field-meta.xml
<CustomField>
    <fullName>Issue__c</fullName>
    <label>Issue</label>
    <type>TextArea</type>
</CustomField>