salesforce/force-app/main/default/objects/Governance_Issue__c/fields/Proposed_Value__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Value__c</fullName>
    <label>Proposed Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>