salesforce/force-app/main/default/objects/Governance_Issue__c/fields/Safe_to_Automate__c.field-meta.xml
<CustomField>
    <fullName>Safe_to_Automate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Safe to Automate</label>
    <type>Checkbox</type>
</CustomField>