salesforce/force-app/main/default/objects/Governance_Issue__c/fields/Severity__c.field-meta.xml
<CustomField>
    <fullName>Severity__c</fullName>
    <label>Severity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>critical</fullName>
                <label>Critical</label>
            </value>
            <value>
                <fullName>warning</fullName>
                <label>Warning</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>