salesforce/force-app/main/default/objects/Governance_Issue__c/listViews/Data_Stewards_Governance_Issue.listView-meta.xml
<ListView>
    <fullName>Data_Stewards_Governance_Issue</fullName>
    <filterScope>Queue</filterScope>
    <label>Data Stewards</label>
    <queue>Data_Stewards</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>